# Mini-Vole-Machine

./: .gitignore  ALU-A1-Task4-S21-S26-S26-20230308-20231055-20231181.cpp  ALU-A1-Task4-S21-S26-S26-20230308-20231055-20231181.h  ALU.cpp  ALU.h  CMakeLists.txt  CPU-A1-Task4-S21-S26-S26-20230308-20231055-20231181.cpp  CPU-A1-Task4-S21-S26-S26-20230308-20231055-20231181.h  CPU.cpp  CPU.h  CU-A1-Task4-S21-S26-S26-20230308-20231055-20231181.cpp  CU-A1-Task4-S21-S26-S26-20230308-20231055-20231181.h  CU.cpp  CU.h  Machine-A1-Task4-S21-S26-S26-20230308-20231055-20231181.cpp  Machine-A1-Task4-S21-S26-S26-20230308-20231055-20231181.h  input-file.txt  main-A1-Task4-S21-S26-S26-20230308-20231055-20231181.cpp  main.cpp  memory-A1-Task4-S21-S26-S26-20230308-20231055-20231181.cpp  memory-A1-Task4-S21-S26-S26-20230308-20231055-20231181.h  memory.cpp  memory.h  op.cpp
text-files/: input-file.txt
